--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@fontsource/roboto": "^5.2.5",
+        "@material-tailwind/react": "^2.1.10",
+        "@mui/icons-material": "^6.4.7",
+        "@mui/material": "^6.4.7",
+        "iconoir-react": "^7.10.1"
     }
 }
